alignt text area, fix bug font selectorDP

--- a/src/Components/SelectorDP.css
+++ b/src/Components/SelectorDP.css
@@ -1,9 +1,9 @@
 .SecondaryContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.4);
   padding: 20px 0px;
-  opacity: 0.9;
+  opacity: 0.96;
   background-color: #F6F6F6;
 }
 
@@ -23,7 +23,7 @@
 .TuPerfil {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-size: 1.2vw;
+  font-size: 1.6rem;
 }
 
 .Bienvenido {
@@ -31,7 +31,7 @@
 }
 
 .Bienvenido-Pilot-Profile {
-  font-size: 1.5vw;
+  font-size: 2.2rem;
 }
 
 .BarBoxContainer {
@@ -87,7 +87,7 @@
   text-align: left;
   text-decoration: none;
   display: inline-block;
-  font-size: 1.5vw;
+  font-size: 1.5rem;
 }
 
 .TabsContainer button:hover {
