--- a/src/Components/UserProfile.css
+++ b/src/Components/UserProfile.css
@@ -14,7 +14,8 @@
 
 .image-profile-pilot{
   display: flex;
-  z-index: 4;
+  width: 8rem;
+  height: 8rem;
 }
 
 .image-profile-box-client{
@@ -61,12 +62,13 @@
 }
 
 .description-label{
+  padding-left: 1rem;
   text-align: left;
   font-size: 1.2rem;
 }
 
 .title-profile{
-  font-size: 2rem;
+  font-size: 2.2rem;
   margin-bottom: 2rem;
 }
 
@@ -77,13 +79,30 @@
   align-items: center;
 }
 
-.fieldSet label {
+.fieldsetlabel {
   width: 25%;
   font-size: 1.2rem;
 }
 
-.fieldSet input {
+.fieldsetinput{
   width: 60%;
+}
+
+.fieldsetlabel label{
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+.fieldsetinput input {
+  width: 90%;
+}
+
+.descriptiontextarea {
+  width: 80%;
+}
+
+.descriptiontextarea textarea{
+  width: 90%;
 }
 
 .field {
@@ -134,6 +153,7 @@
   font-weight: bold;
   color: white;
   margin-left: 25px;
+  margin-top: 25px;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
   transition: 0.5s;
 }
