--- a/src/Pages/DronePilot.css
+++ b/src/Pages/DronePilot.css
@@ -2,10 +2,6 @@
   background-image: url("https://i.blogs.es/85175c/mavic-2-enterprise-7/1366_2000.jpg");
 }
 
-.ContainerMain{
-  width: 90rem;
-}
-
 .subContainer {
   width: 100%;
 }
@@ -23,10 +19,10 @@
     rgba(0, 23, 105, 1) 100%
   );
   color: white;
-  opacity: 0.9;
+  opacity: 0.96;
 }
 
 .MyProfile{
   padding: 2rem;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
